peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Auth_Signer_Track_Bus_Stip__c.field-meta.xml
<CustomField>
    <fullName>Ud_Auth_Signer_Track_Bus_Stip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Auth Signer Track Bus Stip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>