peac_dev/force-app/main/default/objects/Gds_Score__c/fields/ud_Auto_More_Info_Override__c.field-meta.xml
<CustomField>
    <fullName>ud_Auto_More_Info_Override__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ud Auto More Info Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>