peac_dev/force-app/main/default/objects/Gds_Score__c/fields/UD_BANK_STATEMENT__c.field-meta.xml
<CustomField>
    <fullName>UD_BANK_STATEMENT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UD_BANK_STATEMENT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>