peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Co_Dealer_Exempt_Fraud_Model__c.field-meta.xml
<CustomField>
    <fullName>Ud_Co_Dealer_Exempt_Fraud_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Co Dealer Exempt Fraud Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>