peac_dev/force-app/main/default/objects/Gds_Score__c/fields/UD_CO_REC_DEC__c.field-meta.xml
<CustomField>
    <fullName>UD_CO_REC_DEC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UD CO REC DEC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>