peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Copy_of_Driver_License_Stip__c.field-meta.xml
<CustomField>
    <fullName>Ud_Copy_of_Driver_License_Stip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Copy of Driver License Stip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>