peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Corp_Res_Lessee_Po_Stip__c.field-meta.xml
<CustomField>
    <fullName>Ud_Corp_Res_Lessee_Po_Stip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Corp Res Lessee Po Stip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>