peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ud_Credit_Amount__c</fullName>
    <label>Ud Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>