peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Credit_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Ud_Credit_Analyst__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Credit Analyst</label>
    <length>255</length>
    <type>Text</type>
</CustomField>