peac_dev/force-app/main/default/objects/Gds_Score__c/fields/UD_CREDIT_DOCPACK__c.field-meta.xml
<CustomField>
    <fullName>UD_CREDIT_DOCPACK__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UD_CREDIT_DOCPACK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>