peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Cust_Asset_Address_Match__c.field-meta.xml
<CustomField>
    <fullName>Ud_Cust_Asset_Address_Match__c</fullName>
    <label>Ud Cust Asset Address Match</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>