peac_dev/force-app/main/default/objects/Gds_Score__c/fields/UD_CUST_IDOLOGY__c.field-meta.xml
<CustomField>
    <fullName>UD_CUST_IDOLOGY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UD CUST IDOLOGY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>