peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Cust_Ver_Proc_Request_Stip__c.field-meta.xml
<CustomField>
    <fullName>Ud_Cust_Ver_Proc_Request_Stip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Cust Ver Proc Request Stip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>