peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Cust_Verifiy_Bank_Info_Stip__c.field-meta.xml
<CustomField>
    <fullName>Ud_Cust_Verifiy_Bank_Info_Stip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Cust Verifiy Bank Info Stip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>