peac_dev/force-app/main/default/objects/Gds_Score__c/fields/ud_Customer_Fraud_Ind__c.field-meta.xml
<CustomField>
    <fullName>ud_Customer_Fraud_Ind__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ud Customer Fraud Ind</label>
    <length>255</length>
    <type>Text</type>
</CustomField>