peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Dealer_Classification__c.field-meta.xml
<CustomField>
    <fullName>Ud_Dealer_Classification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Dealer Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>