peac_dev/force-app/main/default/objects/Gds_Score__c/fields/UD_DLR_PREFERRED__c.field-meta.xml
<CustomField>
    <fullName>UD_DLR_PREFERRED__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UD_DLR_PREFERRED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>