peac_dev/force-app/main/default/objects/Gds_Score__c/fields/UD_DUE_DILIGENCE__c.field-meta.xml
<CustomField>
    <fullName>UD_DUE_DILIGENCE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UD_DUE_DILIGENCE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>