peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_End_User_Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Ud_End_User_Source_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud End User Source Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>