peac_dev/force-app/main/default/objects/Gds_Score__c/fields/UD_EVER_AUTO_MORE_INFO__c.field-meta.xml
<CustomField>
    <fullName>UD_EVER_AUTO_MORE_INFO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UD_EVER_AUTO_MORE_INFO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>