peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Ud_Existing_Customer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Existing Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>