peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Exp_Over_150K__c.field-meta.xml
<CustomField>
    <fullName>Ud_Exp_Over_150K__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Exp Over 150K</label>
    <length>255</length>
    <type>Text</type>
</CustomField>