peac_dev/force-app/main/default/objects/Gds_Score__c/fields/UD_Max_Term__c.field-meta.xml
<CustomField>
    <fullName>UD_Max_Term__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UD Max Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>