peac_dev/force-app/main/default/objects/Gds_Score__c/fields/ud_Min_Bank_Info__c.field-meta.xml
<CustomField>
    <fullName>ud_Min_Bank_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ud Min Bank Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>