peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Min_Misc_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ud_Min_Misc_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Min Misc Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>