peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Min_Personal_Info__c.field-meta.xml
<CustomField>
    <fullName>Ud_Min_Personal_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Min Personal Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>