peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Months_Verified__c.field-meta.xml
<CustomField>
    <fullName>Ud_Months_Verified__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Months Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>