peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Ofac_Hit__c.field-meta.xml
<CustomField>
    <fullName>Ud_Ofac_Hit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Ofac Hit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>