peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Payments_Upfront__c.field-meta.xml
<CustomField>
    <fullName>Ud_Payments_Upfront__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Payments Upfront</label>
    <length>255</length>
    <type>Text</type>
</CustomField>