peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Paymt_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Ud_Paymt_Frequency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Paymt Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>