peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Pg_Fraud_Alert_Stip__c.field-meta.xml
<CustomField>
    <fullName>Ud_Pg_Fraud_Alert_Stip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Pg Fraud Alert Stip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>