peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_PG_Required_Stip__c.field-meta.xml
<CustomField>
    <fullName>Ud_PG_Required_Stip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud PG Required Stip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>