peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Portal_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Ud_Portal_User_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Portal User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>