peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Proof_of_Equipment_Location_Stip__c.field-meta.xml
<CustomField>
    <fullName>Ud_Proof_of_Equipment_Location_Stip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Proof of Equipment Location Stip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>