peac_dev/force-app/main/default/objects/Gds_Score__c/fields/UD_QUICK_TRACK__c.field-meta.xml
<CustomField>
    <fullName>UD_QUICK_TRACK__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UD QUICK TRACK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>