peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Rejected_App_Last_90__c.field-meta.xml
<CustomField>
    <fullName>Ud_Rejected_App_Last_90__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Rejected App Last 90</label>
    <length>255</length>
    <type>Text</type>
</CustomField>