peac_dev/force-app/main/default/objects/Gds_Score__c/fields/ud_Rp_Num_Guar_Prin_2__c.field-meta.xml
<CustomField>
    <fullName>ud_Rp_Num_Guar_Prin_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ud Rp Num Guar Prin 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>