peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Sales_Leaseback_Doc_Stip__c.field-meta.xml
<CustomField>
    <fullName>Ud_Sales_Leaseback_Doc_Stip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Sales Leaseback Doc Stip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>