peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Ud_Sales_Person__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Sales Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>