peac_dev/force-app/main/default/objects/Gds_Score__c/fields/ud_SFP_Model__c.field-meta.xml
<CustomField>
    <fullName>ud_SFP_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ud SFP Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>