peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_SS_Credit_Box__c.field-meta.xml
<CustomField>
    <fullName>Ud_SS_Credit_Box__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud SS Credit Box</label>
    <length>255</length>
    <type>Text</type>
</CustomField>