peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Syndication_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Ud_Syndication_Eligible__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Syndication Eligible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>