peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Tax_Exempt_Cust__c.field-meta.xml
<CustomField>
    <fullName>Ud_Tax_Exempt_Cust__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Tax Exempt Cust</label>
    <length>255</length>
    <type>Text</type>
</CustomField>