peac_dev/force-app/main/default/objects/Gds_Score__c/fields/UD_Term__c.field-meta.xml
<CustomField>
    <fullName>UD_Term__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UD Term</label>
    <length>10</length>
    <type>Text</type>
</CustomField>