peac_dev/force-app/main/default/objects/Gds_Score__c/fields/UD_TMETRIX_POLICY_SCORE__c.field-meta.xml
<CustomField>
    <fullName>UD_TMETRIX_POLICY_SCORE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>