peac_dev/force-app/main/default/objects/Gds_Score__c/fields/UD_TMETRIX_REASON_CODE__c.field-meta.xml
<CustomField>
    <fullName>UD_TMETRIX_REASON_CODE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason Code</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>