peac_dev/force-app/main/default/objects/Gds_Score__c/fields/UD_TMETRIX_REVIEW_STATUS__c.field-meta.xml
<CustomField>
    <fullName>UD_TMETRIX_REVIEW_STATUS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>