peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Ub_Bv_Flag__c.field-meta.xml
<CustomField>
    <fullName>Ud_Ub_Bv_Flag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Ub Bv Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>