peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Ucc_Filing_Search_Stip__c.field-meta.xml
<CustomField>
    <fullName>Ud_Ucc_Filing_Search_Stip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Ucc Filing Search Stip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>