peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Ud_Vendor_Approval_Output_Stip__c.field-meta.xml
<CustomField>
    <fullName>Ud_Vendor_Approval_Output_Stip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ud Vendor Approval Output Stip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>