peac_dev/force-app/main/default/objects/Gds_Score__c/fields/UD_VER_LEGALSTRUCTURE__c.field-meta.xml
<CustomField>
    <fullName>UD_VER_LEGALSTRUCTURE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UD VER LEGALSTRUCTURE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>