peac_dev/force-app/main/default/objects/Gds_Score__c/fields/UD_VER_TAXID__c.field-meta.xml
<CustomField>
    <fullName>UD_VER_TAXID__c</fullName>
    <description>NEW STIP</description>
    <encryptionScheme>None</encryptionScheme>
    <label>UD VER TAXID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>