peac_dev/force-app/main/default/objects/Gds_Score__c/fields/UD_Verify_SLF_Stip__c.field-meta.xml
<CustomField>
    <fullName>UD_Verify_SLF_Stip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UD Verify SLF Stip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>