peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Underlying_Model__c.field-meta.xml
<CustomField>
    <fullName>Underlying_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Underlying Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>