peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Vehicle_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Mileage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Mileage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>