peac_dev/force-app/main/default/objects/Gds_Score__c/fields/Vendor_Approval__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Approval__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor Approval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>